syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "BaggageProtos";
package baggage;
service BaggageService {
  rpc ProcessBaggage (BaggageRequest) returns (BaggageResponse);
}
message BaggageDTO {
  int32 id = 1;
  int32 passengerId = 2;
  double weight = 3;
  BaggageStatus status = 4;
}
enum BaggageStatus {
  REGISTERED = 0;
  LOADED_IN_PLANE = 1;
  IN_TRANSIT = 2;
  UNLOADED_FROM_PLANE = 3;
  ISSUED = 4;
  LOST = 5;
}
message BaggageRequest {
  BaggageDTO baggage = 1;
}
message BaggageResponse {
  BaggageDTO baggage = 1;
}
